Initial volume support - uses default storageclass
