# api-backend/go/model__project__project_id__pod_get_200_response_items_inner.go
@@ -24,7 +24,7 @@ type ProjectProjectIdPodGet200ResponseItemsInner struct {
 	Tag string `json:"tag"`
 
 	// The storage volumes attached to this pod
-	Storage []Storage `json:"storage,omitempty"`
+	Volumes []Volume `json:"volumes,omitempty"`
 
 	// The environment variables to pass to the pod
 	Environment []EnvironmentVariable `json:"environment,omitempty"`
@@ -55,8 +55,8 @@ func AssertProjectProjectIdPodGet200ResponseItemsInnerRequired(obj ProjectProjec
 		}
 	}
 
-	for _, el := range obj.Storage {
-		if err := AssertStorageRequired(el); err != nil {
+	for _, el := range obj.Volumes {
+		if err := AssertVolumeRequired(el); err != nil {
 			return err
 		}
 	}
