# lib/api_client/api/openapi.yaml
@@ -1158,14 +1158,14 @@ components:
           description: The image tag to run for this pod
           example: "6.0"
           type: string
-        storage:
+        volumes:
           description: The storage volumes attached to this pod
           example:
           - name: blog-images
             size: 10
             mount_path: /var/www/html/images
           items:
-            $ref: '#/components/schemas/Storage'
+            $ref: '#/components/schemas/Volume'
           type: array
         environment:
           description: The environment variables to pass to the pod
@@ -1284,7 +1284,7 @@ components:
           description: The URL of the user's avatar
           example: https://avatars.githubusercontent.com/u/1234?v=4
           type: string
-    Storage:
+    Volume:
       description: A storage volume that is attached to each instance of a pod.
       properties:
         name:
@@ -1299,11 +1299,6 @@ components:
           description: The path to mount the volume at
           example: /var/www/html
           type: string
-        resource_id:
-          description: The global Resource ID of the volume
-          example: account:podinate/project:hello-world/volume:my-blog
-          type: string
-          x-speakeasy-param-readonly: true
       required:
       - mount_path
       - name
